# sorted-supermarket-list

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  state.json
bruno/: Create Item.bru  Hello World.bru  Hello, {name}.bru  List Items.bru  bruno.json
client/: package.json  pnpm-lock.yaml
client/app/: error.tsx  page.tsx
client/src/: axiosInstance.ts
client/src/hooks/: useItems.ts
client/src/models/: Item.ts
server/: state.json
server/src/: main.rs  models.rs  tests.rs
src/: endpoints.rs  main.rs  models.rs  tests.rs
src/archive/: main_old.rs
src/components/: app.rs  home.rs
