[package]
name = "sorted-supermarket-list"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
tower-http = { version = "0.6.1", features = ["trace"] }
mime = "0.3"
http-body-util = "0.1.0"

[dev-dependencies]
tower = { version = "0.5.1", features = ["util"] }